# OpenMonetization-UserGrowth

./: .env  .gitignore  README.md  ab_test_config.json  context.json  coverage.xml  main.txt  pyproject.toml
docs/: soc2_policy.md
plugins/: README.md  example_agent.py
scripts/: demo.py  simple_demo.py
src/open_mon_user_acquisition/: __init__.py
src/open_mon_user_acquisition.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/open_mon_user_acquisition/agents/: __init__.py  base_agent.py  paid_search_agent.py  social_media_agent.py  user_acquisition_agent.py
src/open_mon_user_acquisition/api/: __init__.py  dashboard.py
src/open_mon_user_acquisition/cli/: __init__.py  commands.py  main.py
src/open_mon_user_acquisition/config/: __init__.py  config_manager.py  settings.py
src/open_mon_user_acquisition/core/: __init__.py  interfaces.py  types.py
src/open_mon_user_acquisition/experiments/: __init__.py  ab_testing.py
src/open_mon_user_acquisition/llm/: __init__.py  fallback_manager.py  ollama_backend.py  openai_backend.py
src/open_mon_user_acquisition/observability/: __init__.py  logging_config.py  metrics_collector.py  performance_monitor.py
src/open_mon_user_acquisition/orchestrator/: __init__.py  orchestrator.py  task_scheduler.py  workflow_engine.py
src/open_mon_user_acquisition/plugins/: __init__.py
src/open_mon_user_acquisition/storage/: __init__.py  models.py  sqlite_backend.py
tests/: README.md  __init__.py  conftest.py
tests/unit/: test_cli.py  test_config.py  test_core_types.py  test_llm_backends.py  test_observability.py  test_orchestrator.py  test_storage.py  test_workflow_execution.py
